<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_create_account_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/fragment_create_account_card_view"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="@dimen/fragment_login_card_view_width"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/margin_normal_size">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/fragment_create_account_title_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_margin="@dimen/margin_normal_size"
                    android:text="@string/fragment_create_account_title_txt"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/title_text_size"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_create_account_account_name_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_create_account_title_tv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_margin="@dimen/margin_normal_size">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_create_account_account_name_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fragment_create_account_account_name"
                        android:background="@android:color/transparent"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_create_account_account_password_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_create_account_account_name_container"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_margin="@dimen/margin_normal_size">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_create_account_account_password_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fragment_create_account_account_password"
                        android:background="@android:color/transparent"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_create_account_firstname_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_create_account_account_password_container"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_margin="@dimen/margin_normal_size">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_create_account_firstname_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fragment_create_account_firstname"
                        android:background="@android:color/transparent"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_create_account_lastname_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_create_account_firstname_container"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_margin="@dimen/margin_normal_size">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_create_account_lastname_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fragment_create_account_lastname"
                        android:background="@android:color/transparent"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_create_account_phone_number_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_create_account_lastname_container"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_margin="@dimen/margin_normal_size">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_create_account_phone_number_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fragment_create_account_phone_number"
                        android:background="@android:color/transparent"
                        android:inputType="number"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_create_account_address_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_create_account_phone_number_container"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_margin="@dimen/margin_normal_size">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_create_account_address_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fragment_create_account_address"
                        android:background="@android:color/transparent"/>

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/fragment_create_account_validate_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_create_account_address_container"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_margin="@dimen/margin_normal_size"
                    android:background="@drawable/rounded_border_black"
                    android:text="@string/fragment_create_account_validate_btn" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

